practice projects - rendering base component as wrapper around other templ components, can be refactored into a utility function that wraps the nav bar base component around the rest of the components, at least got base template rendering working, and resolved the nil pointer reference as well with an if statement inside the templ.

--- a/practice_projects/practice_project_2/public/css/output.css
+++ b/practice_projects/practice_project_2/public/css/output.css
@@ -593,12 +593,24 @@ video {
   margin-right: auto;
 }
 
+.flex {
+  display: flex;
+}
+
 .table {
   display: table;
 }
 
 .min-w-full {
   min-width: 100%;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .overflow-hidden {
